Set min-height to heading to avoid layout shifts on 1-line titles

--- a/src/index.css
+++ b/src/index.css
@@ -480,6 +480,7 @@ body.highlight-off mark {
   font-weight: 900;
   letter-spacing: var(--heading-letter-spacing);
   line-height: 1.15;
+  min-height: 2.3em;
   margin-bottom: 32px;
   color: var(--heading-color);
   word-break: break-word;
